general styling fixes

--- a/src/pages/account/forgot-password.astro
+++ b/src/pages/account/forgot-password.astro
@@ -20,14 +20,14 @@ import Layout from '../../layouts/Layout.astro';
               id="email" 
               name="email" 
               required 
-              class="w-full border border-gray-300 rounded px-4 py-2"
+              class="w-full border border-gray-300 rounded !px-2 !py-1"
               placeholder="din@email.com"
             />
           </div>
           <button 
             type="submit"
             id="forgot-password-submit-btn"
-            class="w-full bg-indigo-950 hover:bg-indigo-900 text-white text-center rounded-lg font-semibold transition-all uppercase text-sm cursor-pointer !mt-4 !mb-2"
+            class="w-full bg-indigo-950 hover:bg-indigo-900 text-white text-center rounded-lg font-semibold transition-all uppercase text-sm cursor-pointer !mt-6 !mb-4"
             style="padding: 0.875rem 1.5rem !important; color: white !important;"
           >
             Skicka återställningslänk
