--- a/src/pages/account/signup.astro
+++ b/src/pages/account/signup.astro
@@ -16,7 +16,7 @@ import Layout from '../../layouts/Layout.astro';
               id="email" 
               name="email" 
               required 
-              class="w-full border border-gray-300 rounded px-4 py-2"
+              class="w-full border border-gray-300 rounded !px-2 !py-1"
             />
           </div>
           <div>
@@ -27,7 +27,7 @@ import Layout from '../../layouts/Layout.astro';
               name="password" 
               required 
               minlength="6"
-              class="w-full border border-gray-300 rounded px-4 py-2"
+              class="w-full border border-gray-300 rounded !px-2 !py-1"
             />
             <p class="text-sm text-text-muted mt-1">Måste vara minst 6 tecken</p>
           </div>
@@ -38,7 +38,7 @@ import Layout from '../../layouts/Layout.astro';
               id="confirm-password" 
               name="confirm-password" 
               required 
-              class="w-full border border-gray-300 rounded px-4 py-2"
+              class="w-full border border-gray-300 rounded !px-2 !py-1"
             />
           </div>
           <button 
